# Minecraft

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: main.cpp  save.cpp  save.h
src/core/: math.cpp  math.h  perlin.cpp  perlin.h
src/game/: entity.cpp  entity.h  inventory.cpp  inventory.h  lighting.cpp  lighting.h  player.cpp  player.h  ui.cpp  ui.h  world.cpp  world.h
src/render/: metal_raytracer.h  metal_raytracer.mm  renderer.cpp  renderer.h  textures.cpp  textures.h
